[project]
name = "advanced-rag-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bs4>=0.0.2",
    "langchain>=1.3.9",
    "langchain-ollama>=1.1.0",
    "langchain-postgres>=0.0.17",
    "langchain-text-splitters>=1.1.2",
    "pypdf>=6.13.2",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]
